update for lab2

--- a/CHEM3208_CCM_lab1.ipynb
+++ b/CHEM3208_CCM_lab1.ipynb
@@ -13,9 +13,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ase.build import bulk\n",
-    "from ase.visualize import view\n",
-    "from gpaw import GPAW, PW\n"
+    "import openmm\n",
+    "import nglview\n",
+    "import mdtraj\n"
    ]
   },
   {
